ros_ws/log/build_2024-05-09_13-59-22/flask_ros/stderr.log
  File "/home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/python3.8/site-packages/flask_ros/server.py", line 23
    if request.a == '';
                      ^
SyntaxError: invalid syntax

